<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemScheduleHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:gravity="end|bottom"
                android:textSize="@dimen/itemScheduleTitle"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvItemScheduleAMPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_m"
                android:gravity="end|top"
                android:textSize="@dimen/itemScheduleSubTitle"
                android:textColor="@color/colorPrimary"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/tvItemScheduleConferenceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_the_conference"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvItemScheduleConferenceSpeaker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaker_name"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:ellipsize="end"
                android:lines="1"/>
            <TextView
                android:id="@+id/tvItemScheduleTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="1dp"
                android:text="@string/tag"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="#FFFFFF"
                android:background="@drawable/tag_shape"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>