<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardMargin"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/cardPadding">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/HeightHomeImageView"
                        android:src="@drawable/banner_platzi_conf"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_que_es"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_que_es_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/subtitleSize" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardMargin"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/cardPadding">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/HeightHomeImageView"
                        android:src="@drawable/platzi_conf_2" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_por_que"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_por_que_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/subtitleSize" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/cardMargin"
                app:cardCornerRadius="@dimen/cardCornerRadius"
                app:cardElevation="@dimen/cardElevation">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/cardPadding">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/HeightHomeImageView"
                        android:src="@drawable/platzi_conf_3" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:background="@color/colorPrimary"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_info"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/titleSize"
                        android:textStyle="bold" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/homeSubtitleMargin"
                        android:text="@string/inicio_frag_tv_info_resp"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/subtitleSize" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>