<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/tbLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/platzi_conf_2" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:elevation="@dimen/cardElevation"
                    app:cardCornerRadius="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="@dimen/cardPadding"
                        android:padding="@dimen/cardPadding">
                        <TextView
                            android:id="@+id/tvLocationName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/platziconf_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="30sp"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/tvPlatziConfAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/drawablePadding"
                            android:gravity="start"
                            android:text="@string/address"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic__person_pin" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginVertical="@dimen/viewVerticalMargin"
                            android:background="@color/colorPrimary" />
                        <TextView
                            android:id="@+id/tvPlatziConfPhoneNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/drawablePadding"
                            android:gravity="start"
                            android:text="@string/phone_number"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic__person_pin" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginVertical="@dimen/viewVerticalMargin"
                            android:background="@color/colorPrimary" />
                        <TextView
                            android:id="@+id/tvPlatziConfWebsite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="@dimen/drawablePadding"
                            android:gravity="start"
                            android:text="@string/web_site"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            app:drawableStartCompat="@drawable/ic__person_pin" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/colorPrimary" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>