<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Toolbar
            android:id="@+id/tbSpeakers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="4dp"
                    android:elevation="5dp"
                    android:layout_margin="15dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:paddingHorizontal="@dimen/cardPadding">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="200dp">
                            <ImageView
                                android:id="@+id/imageSpeaker"
                                android:layout_centerInParent="true"
                                android:layout_width="@dimen/speakerPhoto"
                                android:layout_height="@dimen/speakerPhoto"
                                android:src="@mipmap/ic_launcher_round"/>
                        </RelativeLayout>
                        <TextView
                            android:id="@+id/tvDetailSpeakerName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speaker_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20sp"
                            android:textStyle="bold"/>
                        <TextView
                            android:id="@+id/tvDetailSpeakerJobTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speaker_title"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"/>
                        <TextView
                            android:id="@+id/tvDetailSpeakerWork"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/speaker_work"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp"/>
                        <ImageView
                            android:id="@+id/ivSpeakerTwitter"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_icons8_twitter"
                            android:padding="5dp"/>

                        <TextView
                            android:id="@+id/tvDetailSpeakerDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="This are the details of the speaker"
                            android:textColor="@color/colorPrimary"
                            android:textSize="15sp"
                            android:layout_marginVertical="15dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
        </ScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>